app mecanics working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<header-component></header-component>
+<body>
+<header-component class="m-5"></header-component>
+<navigation-component></navigation-component>
 <router-outlet></router-outlet>
+</body>
+
